<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateTodoActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_title"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/color_primary">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/App.Input.Text"
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_description"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_title"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/color_primary">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/App.Input.Text"
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="start|top"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_select_time"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/color_primary">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/App.Input.Text"
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/font_medium"
            android:gravity="start|top"
            android:inputType="text"
            android:lines="1"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_select_date"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_time"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/color_primary">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/App.Input.Text"
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start|top"
            android:inputType="text"
            android:lines="1"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_label_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_type"
        app:fontFamily="@font/font_bold"
        android:textSize="18sp"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/til_date" />

    <RadioGroup
        android:id="@+id/radio_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/text_label_type"
        app:layout_constraintTop_toTopOf="@+id/text_label_type">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_type_start"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:fontFamily="@font/roboto_slab_medium"
            android:text="@string/type_daily"
            android:minEms="6"
            android:textColor="@color/selector_type_text"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_type_end"
            android:button="@null"
            android:gravity="center"
            android:checked="true"
            android:minEms="6"
            android:fontFamily="@font/roboto_slab_medium"
            android:text="@string/type_weekly"
            android:textColor="@color/selector_type_text"
            android:textSize="14sp" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cd_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>